k8s/eks/deployment-app-eks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autoservice-app
  namespace: autoservice
  labels:
    app: autoservice-app
    tags.datadoghq.com/env: homolog
    tags.datadoghq.com/service: autoservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: autoservice-app
  template:
    metadata:
      labels:
        app: autoservice-app
        tags.datadoghq.com/env: homolog
        tags.datadoghq.com/service: autoservice
      annotations:
        ad.datadoghq.com/autoservice-app.logs: '[{"source":"java","service":"autoservice"}]'
    spec:
      containers:
        - name: autoservice-app
          image: ACCOUNT.dkr.ecr.REGION.amazonaws.com/autoservice:TAG
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8088
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 40
            periodSeconds: 20
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
