k8s/eks/ingress-app-eks.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autoservice-app-ingress
  namespace: autoservice
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # ALB do Terraform aponta para os nodes; o Ingress nginx no EKS recebe o path do API Gateway.
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: autoservice-app
                port:
                  number: 8088
